<resources>
    <string name="app_name">TicTacToe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="name">Tic Tac Toe</string>
    <string name="multiplayer">Nowa gra wieloosobowa</string>
    <string name="hotseat">Nowa gra hotseat</string>
    <string name="score">Tablica wyników</string>
    <string name="exit">Wyjście z gry</string>
    <string name="player_1">Gracz 1: 0</string>
    <string name="player_2">Gracz 2: 0</string>
    <string name="reset">Wyjdź</string>
    <string name="dodaj">Dodaj!</string>
    <string name="nazwa_gry">Nazwa gry</string>
</resources>
