<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".MainActivity">-->



<!--    <include layout="@layout/content_main" />-->
<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/btn_addPet"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="bottom|right|end"-->
<!--        android:layout_margin="16dp"-->
<!--        android:tint="@android:color/white"-->
<!--        app:srcCompat="@android:drawable/ic_input_add"/>-->


<!--</androidx.coordinatorlayout.widget.CoordinatorLayout>-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgrounds"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/player"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="5"
        android:fontFamily="@font/bangers"
        android:gravity="center"
        android:text="@string/name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="84sp"
        android:textStyle="bold" />

    <!--    <Switch-->
    <!--        android:id="@+id/switch1"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:layout_marginStart="8dp"-->
    <!--        android:layout_marginTop="128dp"-->
    <!--        android:layout_marginEnd="8dp"-->
    <!--        android:layout_weight="5"-->
    <!--        android:text="VS Computer"-->
    <!--        android:textSize="36sp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.456"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@drawable/button_main"
        android:shadowColor="@color/backgrounds"
        android:text="@string/multiplayer"
        android:textSize="36sp" />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@drawable/button_main"
        android:text="@string/hotseat"
        android:textSize="36sp" />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@drawable/button_main"
        android:text="@string/score"
        android:textSize="36sp" />

    <Button
        android:id="@+id/btn_4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@drawable/button_main"
        android:text="@string/exit"
        android:textSize="36sp" />
</LinearLayout>